# SK-ECE219-Project3

./: .gitignore  AGENTS.md  Makefile  README.md  lefthook.yml  part1.py  part2.py  part3.py  pyproject.toml
answers/: Part1.md  Part2.md  Part3.md
assignment/: FAQ.md  Part0.md  Part1.md  Part2.md  Part3.md
docs/: index.html  styles.css
helpers/: Proj1_LLM_HelperCode.ipynb  pokedex_helper.ipynb  project1_helper_code.ipynb  project3_agent_helper.ipynb  project3_sft_helper.ipynb
outputs/: q10_fewshot_results.json  q12_limitation_data.json  q13_open_challenge.json  q13_results.json  q14_counts.json  q15_examples.json  q16_format_examples.json  q17_selected_tasks.json  q18_demo.json  q1_accuracy.json  q1_baseline_accuracy.json  q1_records.json  q20_accuracy.json  q20_traces.json  q21_categorical.json  q21_correlation.json  q21_distribution.json  q24_top_features.json  q25_regression_results.json  q2_failure_cases.json  q2_failures.json  q4_param_counts.json  q4_parameter_counts.json  q5_1k_sft_results.json  q5_accuracy.json  q5_records.json  q5_sft1k_accuracy.json  q7_3k_accuracy.json  q7_3k_records.json  q7_3k_sft_results.json  q7_scaling.json  q7_scaling_accuracy.json  q7_scaling_results.json  q8_comparison.json  q8_sft_comparison.json  q8_sft_vs_base_comparison.json  q9_failures.json  q9_sft_failures.json
outputs/adapters/lora_1k/: README.md  adapter_config.json
outputs/adapters/lora_3k/: README.md  (+1 more)
outputs/q5_adapter/: README.md
outputs/q7_3k_adapter/: README.md
outputs/sft_1k/: README.md
outputs/sft_3k/: README.md
tests/: test_part1.py  test_part1_fixes.py  test_part2.py
(+14 files in other folders)
