[project]
name = "proj2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "accelerate>=1.12.0",
  "datasets>=4.5.0",
  "hdbscan>=0.8.41",
  "jupyter>=1.1.1",
  "llvmlite>=0.44",
  "matplotlib>=3.10.8",
  "nltk>=3.9.2",
  "numba>=0.60",
  "numpy>=2.3",
  "open-clip-torch>=3.2.0",
  "pandas>=3.0.0",
  "qwen-vl-utils>=0.0.14",
  "scikit-learn>=1.8.0",
  "seaborn>=0.13.2",
  "sentence-transformers>=5.2.0",
  "setuptools>=80.10.2",
  "torch>=2.10.0",
  "torchvision",
  "transformers[torch]>=4.57.6",
  "umap-learn>=0.5.11",
]

[tool.ruff]
exclude = ["helpers", "Makefile"]

[dependency-groups]
dev = ["lefthook>=2.0.15", "pytest>=9.0.2", "ruff>=0.14.14"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
