[project]
name = "proj3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "accelerate>=1.12.0",
  "datasets>=4.5.0",
  "matplotlib>=3.10.8",
  "numpy>=2.3",
  "pandas>=3.0.0",
  "peft>=0.18.1",
  "scikit-learn>=1.8.0",
  "torch>=2.10.0",
  "transformers[torch]>=4.57.6",
  "trl>=0.29.0",
]

[tool.ruff]
exclude = ["helpers", "Makefile"]

[dependency-groups]
dev = ["lefthook>=2.0.15", "pytest>=9.0.2", "ruff>=0.14.14"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
